# cmakelib-component-storage

./: CMLIB_STORAGE.cmake  FindCMLIB_STORAGE.cmake  README.md
.github/workflows/: tests.yml
example/: CMLibStorage.cmake  CMakeLists.txt
test/: CMakeLists.txt  TEST.cmake
test/storage_config/: CMLibStorage.cmake  CMakeLists.txt
test/var_missing_list/: CMLibStorage.cmake
test/var_missing_uri/: CMLibStorage.cmake
test/variable_template/: CMakeLists.txt
