
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
	PROJECT(CMLIB_ENV_TEST)
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
FIND_PACKAGE(CMLIB)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/TEST.cmake")

TEST_RUN("variable_template")
TEST_RUN("storage_config")

TEST_INVALID_CMAKE_RUN("var_missing_list"
	"STORAGE_LIST variable missing in")
TEST_INVALID_CMAKE_RUN("var_missing_uri"
	"Storage list entry 'STORAGE_LIST_TESTLIB' for 'TESTLIB' is not defined")
