
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
	PROJECT(CMLIB_STORAGE_TEST)
ENDIF()

FIND_PACKAGE(BIMCM)

#
# This is just for purpose of test.
# In production use FIND_PACKAGE(BIMCM COMPONENTS STORAGE)
#
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")

#
# This will initialized CMLIB_STORAGE.
# COMPONENT functioonality inb CMLIB use same mechanics
#
FIND_PACKAGE(CMLIB_STORAGE)


